<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/text_login"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginEnd="@dimen/margin_left"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_top"
            android:backgroundTint="@color/text_login"
            android:drawableLeft="@drawable/ic_outline_email_24" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/text_login"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginEnd="@dimen/margin_left"
            android:gravity="center"
            android:backgroundTint="@color/text_login"
            android:drawableLeft="@drawable/ic_outline_lock_24"
            android:layout_marginTop="@dimen/margin_top"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_signIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_left"
            android:layout_marginEnd="@dimen/margin_left"
            android:layout_marginStart="@dimen/margin_left"
            app:cornerRadius="@dimen/button_radius"
            android:text="@string/secure_login"
            app:iconGravity="textStart"
            app:icon="@drawable/ic_outline_lock_24"
            android:layout_marginTop="@dimen/margin_top"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_width"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/cardview_compat_inset_shadow"
                android:backgroundTint="@color/cardview_light_background"
                android:background="@color/cardview_light_background"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginTop="@dimen/margin_top"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:gravity="bottom"
                android:layout_gravity="bottom"
                android:textColor="@color/cardview_light_background"/>

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/cardview_compat_inset_shadow"
                android:backgroundTint="@color/cardview_light_background"
                android:background="@color/cardview_light_background"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/margin_left"
                tools:ignore="RtlCompat" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/sign_in_social"
            android:textColor="@color/cardview_light_background"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/facebook_login"
                android:layout_marginEnd="@dimen/button_gap"
                android:layout_height="@dimen/margin_left"
                android:layout_marginStart="@dimen/margin_left"
                app:cornerRadius="@dimen/button_radius"
                android:text="@string/facebook"
                app:iconGravity="textStart"
                app:icon="@drawable/ic_outline_lock_24"
                android:layout_marginTop="@dimen/margin_top"
                tools:ignore="RtlCompat" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/google_login"
                android:layout_height="@dimen/margin_left"
                android:layout_marginEnd="@dimen/margin_left"
                app:cornerRadius="@dimen/button_radius"
                android:text="@string/google"
                app:iconGravity="textStart"
                app:icon="@drawable/ic_outline_lock_24"
                android:layout_marginTop="@dimen/margin_top"
                tools:ignore="RtlCompat" />

        </LinearLayout>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>